# task-management-system

./: .gitignore  Cargo.toml  api-test.ps1
migrations/: 1_user.sql  2_task.sql
src/: config.rs  error.rs  lib.rs  main.rs  task.rs  worker.rs
src/task/: mod.rs  task.rs  task_handler.rs
src/user/: auth.rs  mod.rs  users.rs
