[package]
name = "task-management-system"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["http2", "macros", "ws"] }
clap = { version = "4.5.57", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
hmac = "0.12.1"
itertools = "0.14.0"
jwt = "0.16.0"
log = "0.4.29"
rand = "0.9.2"
rand_core = "0.10.0"
runtime-tokio = "0.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres"] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
uuid = { version = "1.20.0", features = ["v4"] }

